--- a/_config.yml
+++ b/_config.yml
@@ -37,11 +37,8 @@ comment:
     
 # Social
 social:
-    weibo: onevcat
-    github: onevcat
-    twitter: onevcat
-    gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    github: Fe345
+    mail: 18301108746@163.com
 
 # Google Analytics
 ga:
