--- a/_config.yml
+++ b/_config.yml
@@ -1,46 +1,88 @@
-# Basic
+# Site settings
 title: 战乱之剑
-subtitle: 寄
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">下载主题</a>
-description: “吾心吾行澄如明镜，所作所为皆为正义”
-creator: <a href="http://Fe2345.github.io">@SwordOfWar</a>
+SEOTitle: 战乱之剑
+header-img: img/home-bg.jpg
+email: 18301108746@163.com
+description: "人类的赞歌就是勇气的赞歌"
+keyword: ""
+url: "http://fe2345.github.io"              # your host, for absolute URL
+baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
-url: "http://github.com/Fe2345/Fe2345.github.io"
 
-permalink: /:year/:month/:title/
 
-# Format
+# SNS settings
+RSS: false
+#weibo_username:     
+#zhihu_username:     
+github_username:    Fe2345
+#twitter_username:  huxpro
+#facebook_username:  huxpro
+
+
+
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
-
-# supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: red
-
-# The blog button should not be removed.
-blog_button:
-    title: 文章
-    description: 查看文章
-
-# Navigation buttons in the front page.
-nav:
-    - {title: 项目, description: 我的项目, url: 'http://github.com/Fe2345'}
-    # - {title: Another Button, description: A button, url: 'http://example.com'}
-
-# Pagination
-plugins: [jekyll-paginate]
+permalink: pretty
 paginate: 10
-paginate_path: "page/:num/"
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
-# Comment
-comment:
-    disqus: vno-jekyll
-    # duoshuo: 
-    
-# Social
-social:
-    github: Fe345
-    mail: 18301108746@163.com
 
+
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+gems: [jekyll-paginate]
+
+
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+
+# Disqus settings
+#disqus_username: _your_disqus_short_name_
+
+# Duoshuo settings
+duoshuo_username: huxblog
+# Share component is depend on Comment so we can NOT use share only.
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
+
+
+
+
+# Analytics settings
+# Baidu Analytics
+ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
-ga:
-    # id: your_ga_id
-    # host: your_host
+ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+ga_domain: https://fe2345.github.io
+
+
+
+# Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "摆烂"
+sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
+
+# Featured Tags
+featured-tags: true                     # whether or not using Feature-Tags
+featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+
+
+
+# Friends
+friends: [
+    {
+        title: "瀚海驿站",
+        href: "http://hhhy.link"
+    }
+]
