--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: 18301108746@163.com
 description: "人类的赞歌就是勇气的赞歌"
 keyword: ""
 url: "http://fe2345.github.io"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/home"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
