--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ ga_domain: https://fe2345.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "摆烂"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-SwordOfWar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
